added about section by using tailwind and maked it responsive

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <img class="absolute m-auto w-[100px] lg:w-[120px]" src="assets/microphone.png" alt="">
                     </div>
                     <h3 class="font-extrabold text-[40px] text-white mb-2 lg:text-6xl">TechWave</h3>
-                    <p class="text-white pb-6 opacity-80 text-center">Your daily dose of tech insights, productivity hacks, and personal growth
+                    <p class="text-white pb-6 opacity-60 text-center">Your daily dose of tech insights, productivity hacks, and personal growth
                     </p>
                     <div class="flex items-center gap-2">
                         <button
@@ -60,7 +60,35 @@
     </header>
 
     <main>
-
+        <!-- about section -->
+        <section class="bg-[#1A0B2E]">
+            <div class="w-[400px] pt-10 max-w-[1600px] mx-auto lg:w-full lg:pt-[50px]">
+                <div class="text-center w-11/12 mb-10 mx-auto lg:w-3/4 lg:mb-20">
+                    <h3 class="text-white font-bold text-[32px] mb-4 lg:text-5xl">About the Podcast</h3>
+                    <p class="text-white opacity-60 leading-5 mb-4 lg:mb-6">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.We break down complex topics into digestible insights, explore productivity strategies    that actually work, and share stories of personal growth from industry leaders.</p>
+                    <p class="text-white opacity-60 leading-5">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+                </div>
+                    <hr class="border-white opacity-10 w-11/12 mx-auto pb-10 lg:w-3/4 lg:pb-20">
+                    <div class="grid grid-cols-2 gap-10 w-11/12 mx-auto pb-10 lg:pb-[120px] lg:w-3/4 lg:grid-cols-4">
+                        <div class="text-center">
+                            <h3 class="font-black text-[#00FF88] text-5xl mb-4">150K+</h3>
+                            <p class="text-white opacity-60">Monthly Listeners</p>
+                        </div>
+                        <div class="text-center">
+                            <h3 class="font-black text-[#00FF88] text-5xl mb-4">200+</h3>
+                            <p class="text-white opacity-60">Episodes Published</p>
+                        </div>
+                        <div class="text-center">
+                            <h3 class="font-black text-[#00FF88] text-5xl mb-4">4.9★</h3>
+                            <p class="text-white opacity-60">Average Rating</p>
+                        </div>
+                        <div class="text-center">
+                            <h3 class="font-black text-[#00FF88] text-5xl mb-4">50+</h3>
+                            <p class="text-white opacity-60">Average Rating</p>
+                        </div>
+                    </div>
+            </div>
+        </section>
     </main>
 
     <footer>
