--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                     <p class="bg-[#00FF88] text-[##1A0B2E] font-semibold text-sm text-center py-1 w-[50px] rounded-full shadow-md relative z-10 top-5 left-9 lg:text-lg lg:w-[75px] lg:top-[120px] lg:left-[100px]">NEW</p>
                     
-                    <div class="relative flex items-center justify-center mt-0 mb-5 lg:mt-20 lg:mb-10">
+                    <div class="relative flex items-center justify-center -mt-2 mb-5 lg:mt-20 lg:mb-10">
 
                         <img class="w-[110px] lg:w-[350px]" src="assets/hero-circle.png" alt="">
 
@@ -209,6 +209,46 @@
 
             </div>
 
+        </section>
+
+        <!-- featured section -->
+        <section class="bg-[#1A0B2E] py-10 lg:py-[120px]">
+            <h3 class="font-bold text-white text-center text-[32px] mb-6 lg:text-5xl lg:mb-10">Featured Episodes</h3>
+            <div class="max-w-[1200px] w-fit mx-auto grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-[30px]">
+                <div class="bg-[#250D44] rounded-3xl w-[380px]">
+                    <iframe class="rounded-t-3xl" width="380px" height="215px" src="https://www.youtube.com/embed/dv9q7Ema40k?si=PL_8SHWMY420CKTr"></iframe>
+                    <div class="p-6">
+                        <h3 class="font-bold text-2xl text-white pb-3">The Future of AI in Everyday Life</h3>
+                        <p class="text-white opacity-60 leading-6 pb-3">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                        <div class="flex items-center gap-2">
+                            <img class="w-5 h-5" src="assets/clock.png" alt="">
+                            <p class="font-semibold text-[#00FF88]">42 min</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-[#250D44] rounded-3xl w-[380px]">
+                    <iframe class="rounded-t-3xl" width="380px" height="215px" src="https://www.youtube.com/embed/VuZnXq9exp8?si=NdMLxBriQtJg_BUY"></iframe>
+                    <div class="p-6">
+                        <h3 class="font-bold text-2xl text-white pb-3">Building Better Habits for Remote Work</h3>
+                        <p class="text-white opacity-60 leading-6 pb-3">Practical strategies for staying productive and maintaining work-life balance in a remote environment..</p>
+                        <div class="flex items-center gap-2">
+                            <img class="w-5 h-5" src="assets/clock.png" alt="">
+                            <p class="font-semibold text-[#00FF88]">35 min</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-[#250D44] rounded-3xl w-[380px]">
+                    <iframe class="rounded-t-3xl" width="380px" height="215px" src="https://www.youtube.com/embed/J8VBh3JhNDY?si=7wopxlciVvmonPdW"></iframe>
+                    <div class="p-6">
+                        <h3 class="font-bold text-2xl text-white pb-3">Career Growth in Tech: A Roadmap</h3>
+                        <p class="text-white opacity-60 leading-6 pb-3">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                        <div class="flex items-center gap-2">
+                            <img class="w-5 h-5" src="assets/clock.png" alt="">
+                            <p class="font-semibold text-[#00FF88]">51 min</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
