try to fix background of the footer section for smaller devices

--- a/index.html
+++ b/index.html
@@ -351,9 +351,9 @@
 
     </main>
 
-    <footer>
+    <footer class="bg-[#240749]">
 
-        <div class="bg-[url('./assets/footer-bg.png')] bg-cover bg-center bg-no-repeat lg:bg-top">
+        <div class="bg-[url('./assets/footer-bg.png')] bg-contain bg-center bg-no-repeat lg:bg-cover lg:bg-top">
 
             <div class="text-center py-5 lg:py-[120px]">
 
