added keyframe animation and working navbar list

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     
                     <div class="relative flex items-center justify-center -mt-2 mb-5 lg:mt-20 lg:mb-10">
 
-                        <img class="w-[110px] lg:w-[350px]" src="assets/hero-circle.png" alt="">
+                        <img class="w-[110px] lg:w-[350px] round" src="assets/hero-circle.png" alt="">
 
                         <img class="absolute m-auto w-[30px] lg:w-[120px]" src="assets/microphone.png" alt="">
 
