--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
                 <div class="flex flex-col items-center justify-center">
 
-                    <p class="bg-[#00FF88] text-[##1A0B2E] font-semibold text-sm text-center py-1 w-[50px] rounded-full shadow-md relative z-10 top-5 left-9 lg:text-lg lg:w-[75px] lg:top-[120px] lg:left-[100px]">NEW</p>
+                    <p class="bg-[#00FF88] text-[##1A0B2E] font-semibold text-sm text-center py-1 w-[50px] rounded-full shadow-md relative z-10 top-5 left-9 animate-bounce lg:text-lg lg:w-[75px] lg:top-[120px] lg:left-[100px]">NEW</p>
                     
                     <div class="relative flex items-center justify-center -mt-2 mb-5 lg:mt-20 lg:mb-10">
 
-                        <img class="w-[110px] lg:w-[350px] round" src="assets/hero-circle.png" alt="">
+                        <img class="w-[110px] lg:w-[350px] animate-spin" src="assets/hero-circle.png" alt="">
 
                         <img class="absolute m-auto w-[30px] lg:w-[120px]" src="assets/microphone.png" alt="">
 
